# study-rust

./: Cargo.toml  README.md  buf.yaml  compose.yaml  otel-collector-config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yaml  rust.yml
Webアプリ開発で学ぶRust言語入門/my-todo/: Cargo.toml
Webアプリ開発で学ぶRust言語入門/my-todo/src/: main.rs
articles/: README.md
articles/bicycle-book/: Cargo.toml
articles/bicycle-book/src/: ch07.rs  ch10.rs  lib.rs
articles/gear-book/: Cargo.toml
articles/web-crawler/: Cargo.toml
articles/web-crawler/src/: crawler.rs  main.rs
bicycle-book/: Cargo.toml
bicycle-book/examples/: ch03_benchmark.rs  ch09_main.rs  ch10_main.rs  ch11_static_file.rs  ch11_templates.rs
bicycle-book/src/: ch07.rs  ch08.rs  ch09.rs  ch10.rs  lib.rs
bicycle-book/src/ch02/: rpn.rs
bicycle-book/src/ch03/: first.rs  second.rs  third.rs  util.rs
bicycle-book/src/ch07/: rc.rs  ref_cel.rs  toy_vec.rs
books/: README.md
books/Webアプリ開発で学ぶRust言語入門/: .env  README.md  compose.yaml
books/Webアプリ開発で学ぶRust言語入門/my-todo/: Cargo.toml  Makefile
books/Webアプリ開発で学ぶRust言語入門/my-todo/migrations/: 20230915140218_init.sql  20230916141208_label.sql
books/Webアプリ開発で学ぶRust言語入門/my-todo/src/: handler.rs  handlers.rs  main.rs  repositories.rs  repository.rs
books/Webアプリ開発で学ぶRust言語入門/my-todo/src/handler/: label.rs  todo.rs  user.rs
books/Webアプリ開発で学ぶRust言語入門/my-todo/src/repository/: label.rs  todo.rs
books/Webアプリ開発で学ぶRust言語入門/my-todo/src/repository/label/: memory.rs  postgres.rs
books/Webアプリ開発で学ぶRust言語入門/my-todo/src/repository/todo/: memory.rs  postgres.rs
books/bicycle-book/: Cargo.toml
books/bicycle-book/src/ch03/: fourth.rs
books/bicycle-book/src/ch07/: ref_cel.rs
books/bicycle-book/tests/: ch10_char.rs
books/gear-book/: Cargo.toml
books/gear-book/src/: ch04.rs  lib.rs
books/web-crawler/: Cargo.toml
cookbook/: Cargo.toml
cookbook/src/: algorithms.rs  bitfield.rs  command_line.rs  concurrency.rs  datetime.rs  lib.rs
cookbook/src/algorithms/: random.rs  sort.rs
cookbook/src/command_line/: ansi_terminal.rs
cookbook/src/concurrency/: parallel_tasks.rs  thread.rs
crates/: Cargo.toml  README.md
crates/other-lib/: Cargo.toml
crates/other-lib/src/: dotenv.rs  dotenvy.rs  lib.rs
crates/src/: config.rs  dotenv.rs  lib.rs  speculate.rs  test.rs
crates/standard-library/: Cargo.toml
crates/standard-library/src/: lib.rs  net.rs  num.rs  sync.rs
crates/std-lib/: Cargo.toml
crates/std-lib/src/: declarative_macro.rs  pattern.rs
crates/tests/: config.rs  dotenv.rs  speculate.rs
crates/third-party-library/: Cargo.toml
crates/third-party-library/src/: config.rs  lib.rs  phone_number.rs  prop_test.rs
gcd/: Cargo.toml
gcd/src/: gcd.rs  main.rs
gear-book/: Cargo.toml
gear-book/examples/: ch04_samplecli.rs
gear-book/src/: ch04.rs
gear-book/templates/: index.html
itrp-mandelbrot/: Cargo.toml  LICENSE_MIT
itrp-mandelbrot/benches/: logic.rs
itrp-mandelbrot/src/: lib.rs  logic.rs
itrp-mandelbrot/www/: index.js  package-lock.json  package.json
itrp-numberplace/: Cargo.toml
itrp-numberplace/src/: lib.rs
itrp-numberplace/www/: index.js
itrp_samplecli/: Cargo.toml
itrp_samplecli/src/: main.rs
itrp_todo/: Cargo.toml
itrp_todo/src/: main.rs
itrp_todo/templates/: index.html
itrp_ui_demo/: Cargo.toml
itrp_ui_demo/src/: main.rs
libraries/: README.md
libraries/standard/src/: net.rs  num.rs  pattern.rs  sync.rs
macros/: Cargo.toml
macros/src/: lib.rs
programming_rust/src/: ch20_macro.rs  lib.rs
standard-library/src/: lib.rs  net.rs
std/: Cargo.toml
std-lib/: Cargo.toml
std-lib/src/: declarative_macro.rs  lib.rs  pattern.rs  sync.rs
std-lib/tests/: declarative_macro.rs  pattern.rs  sync.rs
third-party-library/: Cargo.toml
third-party-library/src/: lib.rs  speculate.rs
web-crawler/: Cargo.toml
web-crawler/src/: crawler.rs  lib.rs  main.rs
