[package]
name = "bicycle-book"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_pcg = "0.2"
rayon = "1.5.0"
num_cpus = "1.13.0"
lazy_static = "1.4.0"
thiserror = "1.0.23"
regex = "1.4.3"
actix-web = "0.7.0"
serde = "1.0.0"
serde_derive = "1.0.0"
tera = "0.11.0"

[dev-dependencies]
approx = "0.5.0"
