[package]
name = "cookbook"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
ansi_term = "0.12.1"
crossbeam = "0.7.3"
lazy_static = "1.4.0"
rayon = "1.4.1"
