[package]
name = "gear-book"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
thiserror = "1.0.26"
anyhow = "1.0.41"
actix-web = "3.3.2"
actix-rt = "1.1.1"
askama = "0.10.5"
rusqlite = { version = "0.25.3", features=["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"


[dev-dependencies]
rstest = "0.10.0"
