[package]
name = "web-crawler"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
eyre = "0.6"
select = "0.5.0"
url = "2.2.1"
log = "0.4.14"
env_logger = "0.8.3"
thiserror = "1.0.24"
