[package]
name = "bicycle-book"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.6.1"
num_cpus = "1.15.0"
lazy_static = "1.4.0"
thiserror = "1.0.38"
regex = "1.7.1"

[dev-dependencies]
approx = "0.5.1"
