[package]
name = "bicycle-book"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num_cpus = "1.16.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.7.0"
regex = "1.8.4"
thiserror = "1.0.40"

[dev-dependencies]
approx = "0.5.1"
