[package]
name = "gear-book"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
thiserror = "1.0.39"

[dev-dependencies]
rstest = "0.16.0"
