[package]
name = "gear-book"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.17.0"
