[package]
name = "web-crawler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
eyre = "0.6"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking"] }
select = "0.6.0"
structopt = "0.3.26"
thiserror = "1.0.43"
url = "2.4.0"

[dev-dependencies]
rstest = "0.17.0"
