[package]
name = "bicycle-book"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.6.1"
num_cpus = "1.15.0"
lazy_static = "1.4.0"
thiserror = "1.0.38"
regex = "1.7.0"

[dev-dependencies]
approx = "0.5.1"
