[package]
name = "gear-book"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
thiserror = "1.0.26"
anyhow = "1.0.41"

[dev-dependencies]
rstest = "0.10.0"
