[package]
name = "gear-book"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive", "cargo"] }
thiserror = "1.0.38"
anyhow = "1.0.68"

[dev-dependencies]
rstest = "0.16.0"
