[package]
name = "web-crawler"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
eyre = "0.6"
select = "0.6.0"
url = "2.3.1"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.38"
structopt = "0.3.26"

[dev-dependencies]
rstest = "0.16.0"
