[package]
name = "other-lib"
version = "0.1.0"
authors = ["kuwata0037 <kuwata0037@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
config = "0.13.3"
serde = { version = "1.0.127", features = ["derive"] }
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.4"
rstest = "0.12.0"
speculate = "0.1.2"

[[bench]]
name = "criterion"
harness = false
