[package]
name = "third-party-library"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
config = "0.13.3"
dotenvy = "0.15.7"
phonenumber = "0.3.2"
serde = { version = "1.0.160", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive", "phone"] }

[dev-dependencies]
criterion = "0.4.0"
rstest = "0.17.0"
speculate = "0.1.2"

[[bench]]
name = "criterion"
harness = false
