[package]
name = "third-party-library"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
config = "0.13.3"
dotenvy = "0.15.7"
phonenumber = "0.3.2"
serde = { version = "1.0.179", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive", "phone"] }

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.2.0"
proptest-derive = "0.3.0"
rstest = "0.18.1"
speculate = "0.1.2"

[[bench]]
name = "criterion"
harness = false
