[package]
name = "learn-rust-with-web-application-my-todo"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
hyper = { version = "1.5.1", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
