[package]
name = "web-rust-my-todo"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = "0.6.20"
mime = "0.3.17"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
thiserror = "1.0.64"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
hyper = { version = "0.14.29", features = ["full"] }
tower = "0.4.13"
